# polydrive

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  docker-compose.test.yml  docker-compose.yml
.docker/: Dockerfile.mongo-init  init-replicaset.sh  nginx.conf
.github/workflows/: client.yml  release.yml  scala.yml
client/: .gitignore  Cargo.toml  Dockerfile  build.rs
client/docs/: cli-reference.md
client/src/: config.rs  grpc.rs  lazy.rs  main.rs
client/src/agent/: list.rs
client/src/cli/: list.rs
client/src/command/: handler.rs  mod.rs  pipe.rs
client/src/file_manager/: mod.rs
client/src/indexer/: grpc.rs  mod.rs
client/src/server/: mod.rs  watch.rs
client/src/server/watcher/: mod.rs  pool.rs
client/src/socket_listener/: mod.rs
client/src/storage_manager/: mod.rs
client/src/synchronizer/: mod.rs
client/src/watcher/: mod.rs  pool.rs
server/: .gitignore  README.md  build.sbt
server/.bsp/: sbt.json
server/project/: plugins.sbt
server/src/main/protobuf/: client.proto  file.proto  server.proto  upload.proto
server/src/main/resources/: application.conf  logback.xml
server/src/main/scala/: FileManagerServiceImpl.scala  FileRequester.scala  Server.scala
server/src/main/scala/file/: FileClient.scala  MinioConfig.scala
server/src/main/scala/persistency/: MongoConfig.scala
server/src/test/scala/: Server.scala
