[package]
name = "polydrive"
version = "0.1.0"
edition = "2021"
authors = [
    "Thomas Gouveia <thomas.gouveia@etu.umontpellier.fr>",
    "Alexandre Burgoni <alexandre.burgoni@etu.umontpellier.fr>",
    "Mathias Flagey <mathias.flagey@etu.umontpellier.fr>",
    "Hugo Amalric <hugo.amalric@etu.umontpellier.fr>",
    "Jérémy Lardenois <jeremy.lardenois@etu.umontpellier.fr>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
log = "0.4.14"
env_logger = "0.9.0"
anyhow = "1.0.56"
glob = "0.3.0"
notify = "4.0.17"
tonic = "0.6.2"
prost = "0.9.0"
prost-types = "0.9.0"
tokio = { version="1.17.0", features=["macros", "rt-multi-thread"] }
async-trait = "0.1.52"

[build-dependencies]
tonic-build = "0.6.2"

[dev-dependencies]
tempfile = "3.3.0"